Fix filmstrip cell not showing selected scene when lyrics locked.

--- a/app/components/BannerFilmstrip/Filmstrip/Scene/Cell/style.scss
+++ b/app/components/BannerFilmstrip/Filmstrip/Scene/Cell/style.scss
@@ -15,8 +15,9 @@
         transition: background-color $transitionDuration__default;
     }
 
+    .TW__lyricsLocked
     .FilmstripScene__selected
-    & {
+    &.FilmstripCell__notCursor {
         background-color: $colour__neutral__dark;
     }
 
